#ifndef _WEAPON_H_
#define _WEAPON_H_

#include "Item.h"
class Game;
class Weapon : public Item{
public:
  Weapon(Game* g, size_t r, size_t c, size_t v,size_t t):Item(g,r,c,v,t){}
  virtual ~Weapon(){};
  virtual void move(size_t direction, size_t step){Item::move(direction, step);}
  virtual void show(){};
  virtual void remove();
  virtual void update(){};
};

#endif
